fixed cs-specific title alignment + links

--- a/src/rr_pages/cs-specific.css
+++ b/src/rr_pages/cs-specific.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
 .main-content h4 { 
-    text-align: center;
+    text-align: left;
     margin-top: 3%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 1000;
